# fastapi_p31

./: .gitignore  Makefile  TODO  alembic.ini  main.py  pyproject.toml  tox.ini
admin/: __init__.py  problems.py  users.py
checker/: Dockerfile.runner  input1.txt  input2.txt  input3.txt  main.py  output1.txt
core/: config.py
database/: __init__.py  base_model.py  fixtures_loader.py  problems.py  users.py
env/: .env.example
fixtures/: problems.json  topics.json
migrations/: env.py
routers/: __init__.py  problems.py  users.py
schemas/: __init__.py  base_schema.py  problems.py  users.py
utils/: checker.py  datagen.py  pagination.py  security.py  validators.py
web/: app.py  provider.py
